fix: Correct whitespace around images on show.ejs

--- a/public/stylesheets/imgStyle.css
+++ b/public/stylesheets/imgStyle.css
@@ -6,3 +6,11 @@
   object-position: center;
   border-radius: 0.25rem;
 }
+
+/* removes white space for show.ejs campground images */
+.carousel-item img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  object-position: center;
+}
